--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -39,11 +39,19 @@
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
 
-    const fifteen = inventors.filter((item) => item.year < 1600 && item.year > 1499);
-    console.table(fifteen);
+    const fifteen = inventors.filter(item => item.year < 1600 && item.year > 1499);
+    // console.table(fifteen);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+
+    const fullNames = inventors.map(item => {
+      return item.first + " " + item.last;
+      }
+      // or(without curly br.): `${item.first} ${item.last}`
+    );
+
+    console.log(fullNames);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
