--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -51,10 +51,14 @@
       // or(without curly br.): `${item.first} ${item.last}`
     );
 
-    console.log(fullNames);
+    // console.table(fullNames);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+
+    const sortedInventors = inventors.sort((a, b) => a.year - b.year);
+
+    // console.table(sortedInventors);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
