Acomplish Array.prototype.reduce()

--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -63,6 +63,10 @@
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
 
+    const ageAccumulated = inventors.reduce((accumulator, item) => accumulator + (item.passed - item.year), 0);
+
+    // console.log(ageAccumulated);
+
     // 5. Sort the inventors by years lived
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
