--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -56,9 +56,9 @@
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
 
-    const sortedInventors = inventors.sort((a, b) => a.year - b.year);
+    const sortedBirthdate = inventors.sort((a, b) => a.year - b.year);
 
-    // console.table(sortedInventors);
+    // console.table(sortedBirthdate);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
@@ -68,6 +68,10 @@
     // console.log(ageAccumulated);
 
     // 5. Sort the inventors by years lived
+
+    const oldestInventors = inventors.sort((a, b) => (b.passed - b.year) - (a.passed - a.year))
+
+    console.table(oldestInventors);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
