--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -71,11 +71,18 @@
 
     const oldestInventors = inventors.sort((a, b) => (b.passed - b.year) - (a.passed - a.year))
 
-    console.table(oldestInventors);
+    // console.table(oldestInventors);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
+    // Paste in console
+    // const category = document.querySelector('.mw-category');
+    // const links = Array.from(category.querySelectorAll('a'));
+    // const de = links.map(link => link.textContent)
+    //                 .filter(streetsName => streetsName.includes('de'));
+
+    // console.table(de);
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
