Start solving Sort the people alphabetically

--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -76,7 +76,7 @@
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
-    // Paste in console
+    // // Paste in console
     // const category = document.querySelector('.mw-category');
     // const links = Array.from(category.querySelectorAll('a'));
     // const de = links.map(link => link.textContent)
@@ -86,6 +86,10 @@
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+
+    const splittedNames = people.map(item => item.split(', '))
+                                .sort()
+    console.log(splittedNames)
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
